@@ -510,6 +510,7 @@ Damon Kohler
 Marko Kohtala
 Vlad Korolev
 Joseph Koshy
+Jerzy Kozera
 Maksim Kozyarchuk
 Stefan Krah
 Bob Kras
